--- a/app/css/customer.css
+++ b/app/css/customer.css
@@ -19,13 +19,13 @@ top: 0px;
 left: 0px;
 width: 220px;
 height: 100%;
-background: rgb(235,235,235);
+background: rgb(236, 236, 236);
 }
 
 .detail_container {
 top: 0px;
 padding-left: 230px;
-padding-top: 8px;
+padding-top: 10px;
 padding-right: 8px;
 padding-bottom: 8px;
 width: 100%;
@@ -36,13 +36,15 @@ background: transparent;
 .app_unit {
 position: relative;
 float: left;
-width: 230px;
+width: 284px;
 height: 170px;
 margin: 8px;
-background: rgb(246,246,246);
-border-style: solid;
-border-color: rgb(198,198,198);
-border-width: 1px;
+background: rgb(255, 255, 255);
+box-shadow: 0px 0px 2px gray;
+}
+
+.app_unit:hover {
+background: orange;
 }
 
 .fadeIn {
