--- a/app/css/customer.css
+++ b/app/css/customer.css
@@ -17,10 +17,18 @@ overflow: none;
 position: absolute;
 top: 0px;
 left: 0px;
-width: 220px;
+width: 200px;
 height: 100%;
-background: rgb(255, 255, 255);
 box-shadow: 0 0 4px gray;
+background: #3f4c6b; /* Old browsers */
+background: -moz-linear-gradient(top,  #3f4c6b 0%, #606c88 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3f4c6b), color-stop(100%,#606c88)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #3f4c6b 0%,#606c88 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #3f4c6b 0%,#606c88 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #3f4c6b 0%,#606c88 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #3f4c6b 0%,#606c88 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#606c88',GradientType=0 ); /* IE6-9 */
+
 }
 
 .logo {
@@ -30,15 +38,15 @@ font-family: arial;
 font-size: 22px;
 text-align: left;
 position: relative;
-color: #65ABFF;
+color: #DDDDDD;
 font-weight: bold;
 margin-bottom: 26px;
 }
 
 .search_bar {
 position: relative;
-width: 194px;
-background: #ADADAD;
+width: 176px;
+background: #D5D5D5;
 height: 26px;
 left: 11px;
 margin-bottom: 15px;
@@ -52,7 +60,7 @@ font-family: arial;
 font-size: 16px;
 line-height: 25px;
 padding-left: 16px;
-color: rgb(255, 255, 255);
+color: rgb(47, 47, 47);
 }
 
 .search_bar_bn {
@@ -61,7 +69,7 @@ top: 0px;
 right: 0px;
 width: 26px;
 height: 26px;
-background: #65ABFF;
+background: orange;
 border-radius: 26px;
 box-shadow: 0 0 1px gray;
 }
@@ -74,14 +82,14 @@ background: orange;
 font-size: 16px;
 font-family: Arial;
 height: 25px;
-width: 210px;
+width: 180px;
 position: relative;
 line-height: 25px;
 padding-left: 0px;
 padding-bottom: 7px;
 margin-left: 16px;
 margin-right: 0px;
-color: #6C6C6C;
+color: #DDDDDD;
 }
 
 .main_navigator_h1:hover {
@@ -100,7 +108,7 @@ padding-left: 7px;
 margin-left: 20px;
 margin-right: 0px;
 border-color: #33CCFF;
-color: #858585;
+color: #DDDDDD;
 }
 
 .main_navigator_h2:hover {
@@ -110,7 +118,7 @@ color: #65ABFF;
 
 .detail_container {
 top: 0px;
-padding-left: 230px;
+padding-left: 208px;
 padding-top: 10px;
 padding-right: 8px;
 padding-bottom: 8px;
@@ -133,7 +141,7 @@ margin-bottom: 5px;
 .app_unit {
 position: relative;
 float: left;
-width: 280px;
+width: 285px;
 height: 170px;
 margin: 8px;
 background: rgb(255, 255, 255);
