--- a/app/css/customer.css
+++ b/app/css/customer.css
@@ -20,14 +20,14 @@ left: 0px;
 width: 200px;
 height: 100%;
 box-shadow: 0 0 4px gray;
-background: #3f4c6b; /* Old browsers */
-background: -moz-linear-gradient(top,  #3f4c6b 0%, #606c88 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3f4c6b), color-stop(100%,#606c88)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #3f4c6b 0%,#606c88 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #3f4c6b 0%,#606c88 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #3f4c6b 0%,#606c88 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #3f4c6b 0%,#606c88 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#606c88',GradientType=0 ); /* IE6-9 */
+background: #23538a; /* Old browsers */
+background: -moz-linear-gradient(top,  #23538a 0%, #a7cfdf 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#a7cfdf)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #23538a 0%,#a7cfdf 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #23538a 0%,#a7cfdf 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #23538a 0%,#a7cfdf 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #23538a 0%,#a7cfdf 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#a7cfdf',GradientType=0 ); /* IE6-9 */
 
 }
 
@@ -89,12 +89,12 @@ padding-left: 0px;
 padding-bottom: 7px;
 margin-left: 16px;
 margin-right: 0px;
-color: #DDDDDD;
+color: #F7F7F7;
 }
 
 .main_navigator_h1:hover {
 cursor: pointer;
-color: #65ABFF;
+color: orange;
 }
 
 .main_navigator_h2 {
@@ -113,7 +113,7 @@ color: #DDDDDD;
 
 .main_navigator_h2:hover {
 cursor: pointer;
-color: #65ABFF;
+color: orange;
 }
 
 .detail_container {
@@ -136,6 +136,8 @@ top: 4px;
 font-family: arial;
 font-size: 23px;
 margin-bottom: 5px;
+color: #23538a;
+font-weight: bold;
 }
 
 .app_unit {
@@ -149,7 +151,42 @@ box-shadow: 0px 0px 4px gray;
 }
 
 .app_unit:hover {
-background: #b3d4fc;
+cursor: pointer;
+}
+
+.app_mask {
+width: 100%;
+height: 40px;
+top: 130px;
+background: rgba(255, 255, 255, 0.5);
+position: absolute;
+}
+
+.app_name {
+position: absolute;
+left: 10px;
+top: 132px;
+font-family: arial;
+font-size: 14.5px;
+color: rgb(62, 62, 62);
+}
+
+.app_brief {
+position: absolute;
+left: 10px;
+top: 149px;
+font-family: arial;
+font-size: 13px;
+color: rgb(115, 115, 115);
+}
+
+.app_price {
+position: absolute;
+left: 240px;
+top: 147px;
+font-family: arial;
+font-size: 14px;
+color: rgb(51,176,240);
 }
 
 .fadeIn {
