--- a/app/css/customer.css
+++ b/app/css/customer.css
@@ -21,13 +21,13 @@ width: 200px;
 height: 100%;
 box-shadow: 0 0 4px gray;
 background: #23538a; /* Old browsers */
-background: -moz-linear-gradient(top,  #23538a 0%, #a7cfdf 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#a7cfdf)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #23538a 0%,#a7cfdf 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #23538a 0%,#a7cfdf 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #23538a 0%,#a7cfdf 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #23538a 0%,#a7cfdf 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#a7cfdf',GradientType=0 ); /* IE6-9 */
+background: -moz-linear-gradient(top,  #23538a 0%, #5db9dd 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #23538a 0%,#5db9dd 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 ); /* IE6-9 */
 
 }
 
