--- a/app/css/customer.css
+++ b/app/css/customer.css
@@ -13,13 +13,16 @@ background-color: rgb(246,246,246);
 overflow: none;
 }
 
-.category_container {
+#category_container {
 position: absolute;
 top: 0px;
 left: 0px;
 width: 200px;
 height: 100%;
-box-shadow: 0 0 4px gray;
+z-index: 2;
+border-right-style: solid;
+border-right-width: 1px;
+border-right-color: rgb(215, 215, 215);
 background: #23538a; /* Old browsers */
 background: -moz-linear-gradient(top,  #23538a 0%, #5db9dd 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd)); /* Chrome,Safari4+ */
@@ -28,7 +31,6 @@ background: -o-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Opera 11.10+ *
 background: -ms-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* IE10+ */
 background: linear-gradient(to bottom,  #23538a 0%,#5db9dd 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 ); /* IE6-9 */
-
 }
 
 .logo {
@@ -60,7 +62,7 @@ font-family: arial;
 font-size: 16px;
 line-height: 25px;
 padding-left: 16px;
-color: rgb(47, 47, 47);
+color: rgb(0, 42, 139);
 }
 
 .search_bar_bn {
@@ -188,6 +190,37 @@ font-family: arial;
 font-size: 14px;
 color: rgb(51,176,240);
 }
+
+#overlay_container {
+position: absolute;
+top: 0px;
+left: 0px;
+width: 100%;
+height: 100%;
+padding-left: 220px;
+z-index: 1;
+background: #23538a; /* Old browsers */
+background: -moz-linear-gradient(top,  #23538a 0%, #5db9dd 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #23538a 0%,#5db9dd 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 ); /* IE6-9 */
+
+}
+
+#overlay_name {
+position: relative;
+left: 7px;
+top: 14px;
+font-family: arial;
+font-size: 23px;
+margin-bottom: 5px;
+color: #F7F7F7;
+font-weight: bold;
+}
+
 
 .fadeIn {
         /* CSS needed for animation
