--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,9 +20,10 @@ left: 0px;
 width: 200px;
 height: 100%;
 z-index: 2;
-border-right-style: solid;
+box-shadow: 0 0 8px gray;
+/*border-right-style: solid;
 border-right-width: 1px;
-border-right-color: rgb(215, 215, 215);
+border-right-color: rgb(215, 215, 215);*/
 background: #23538a; /* Old browsers */
 background: -moz-linear-gradient(top,  #23538a 0%, #5db9dd 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd)); /* Chrome,Safari4+ */
@@ -201,6 +202,23 @@ background: rgb(242, 242, 242);
 z-index: 1;
 transform: translateY(-50%);
 box-shadow: 0 0 5px black;
+border-radius: 10px;
+}
+
+.overlay_close {
+position: absolute;
+float: right;
+right: 14px;
+top: 10px;
+font-family: arial;
+font-size: 16px;
+color: rgb(51,176,240);
+font-weight: bold;
+}
+
+.overlay_close:hover {
+cursor: pointer;
+color: orange;
 }
 
 .overlay_app_edge {
