--- a/app/css/main.css
+++ b/app/css/main.css
@@ -195,14 +195,31 @@ color: rgb(51,176,240);
 #overlay_container {
 position: absolute;
 top: 50%;
-left: 233px;
-width: calc(100% - 283px);
-height: calc(100% - 62px);
-background: rgb(242, 242, 242);
-z-index: 1;
+left: 200px;
+width: calc(100% - 200px);
+height: 100%;
+z-index: 3;
 transform: translateY(-50%);
-box-shadow: 0 0 5px black;
-border-radius: 10px;
+border-left-style: solid;
+border-left-width: 1px;
+border-left-color: rgb(200,200,200);
+background: #23538a; /* Old browsers */
+background: -moz-linear-gradient(top,  #23538a 0%, #5db9dd 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #23538a 0%,#5db9dd 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 ); /* IE6-9 */
+
+}
+
+.overlay_inner_container{
+position: absolute;
+top:0px;
+left:0px;
+width:calc(100% - 200px);
+height:100%;
 }
 
 .overlay_close {
@@ -214,6 +231,7 @@ font-family: arial;
 font-size: 16px;
 color: rgb(51,176,240);
 font-weight: bold;
+z-index: 10;
 }
 
 .overlay_close:hover {
@@ -222,33 +240,42 @@ color: orange;
 }
 
 .overlay_app_edge {
+position: absolute;
+float: right;
+top: 50px;
+right: 126px;
 width: 58px;
 height: 62px;
 background: rgb(0, 0, 0);
 border-radius: 14px;
 margin-top: 9px;
 margin-left: 0;
-box-shadow: 0 0 2px 0px black;
+box-shadow: 0 1px 4px 0px black;
 }
 
 .overlay_app_img {
 position: absolute;
+float: right;
+top: 58px;
+right: 127px;
 width: 56px;
 height: 56px;
 background: rgb(51, 176, 240);
 border-radius: 12px;
-margin-top: -62px;
-margin-left: 1px;
+margin-top: 0;
+margin-left: 0;
+box-shadow: 0 0 9px 2px white;
 }
 
 .overlay_name {
-position: relative;
-left: 7px;
-top: 14px;
+position: absolute;
+float: left;
+right: 33px;
+top: 67px;
 font-family: arial;
-font-size: 23px;
+font-size: 16px;
 margin-bottom: 5px;
-color: #F7F7F7;
+color: rgb(10, 0, 87);
 font-weight: bold;
 }
 
