--- a/app/css/main.css
+++ b/app/css/main.css
@@ -195,22 +195,26 @@ color: rgb(51,176,240);
 #overlay_container {
 position: absolute;
 top: 50%;
-left: 210px;
-width: calc(100% - 240px);
-height: calc(100% - 20px);
-border-radius: 10px;
+left: 200px;
+width: calc(100% - 200px);
+height: 100%;
 z-index: 3;
 transform: translateY(-50%);
 background: #F7F7F7;
 box-shadow: 0 0 10px gray;
 }
 
-.overlay_inner_container{
+.overlay_iframe_container{
 position: absolute;
 top:0px;
 left:0px;
 width:calc(100% - 200px);
 height:100%;
+}
+
+.full {
+width: 100%;
+height: 100%;
 }
 
 .overlay_close {
