--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,7 +20,7 @@ left: 0px;
 width: 200px;
 height: 100%;
 z-index: 2;
-box-shadow: 0 0 8px gray;
+box-shadow: 0 0 8px black;
 /*border-right-style: solid;
 border-right-width: 1px;
 border-right-color: rgb(215, 215, 215);*/
@@ -194,27 +194,37 @@ color: rgb(51,176,240);
 
 #overlay_container {
 position: absolute;
-top: 50%;
+top: 0px;
 left: 200px;
 width: calc(100% - 200px);
 height: 100%;
-z-index: 3;
-transform: translateY(-50%);
-background: #F7F7F7;
-box-shadow: 0 0 10px gray;
+z-index: 1;
+background: #066dab; /* Old browsers */
+background: -moz-linear-gradient(top,  #066dab 0%, #8abbd7 69%, #c5deea 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#066dab), color-stop(69%,#8abbd7), color-stop(100%,#c5deea)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #066dab 0%,#8abbd7 69%,#c5deea 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #066dab 0%,#8abbd7 69%,#c5deea 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #066dab 0%,#8abbd7 69%,#c5deea 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #066dab 0%,#8abbd7 69%,#c5deea 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#066dab', endColorstr='#c5deea',GradientType=0 ); /* IE6-9 */
 }
 
 .overlay_iframe_container{
 position: absolute;
-top:0px;
-left:0px;
-width:calc(100% - 200px);
-height:100%;
+top: 16px;
+left: 16px;
+width: calc(100% - 220px);
+height: calc(100% - 32px);
+border-radius: 10px;
+box-shadow: 0 0 10px 1px black;
+overflow: hidden;
+z-index: 3;
 }
 
 .full {
 width: 100%;
 height: 100%;
+overflow: hidden;
 }
 
 .overlay_close {
@@ -224,7 +234,7 @@ right: 14px;
 top: 10px;
 font-family: arial;
 font-size: 16px;
-color: rgb(51,176,240);
+color: rgb(255,255,255);
 font-weight: bold;
 z-index: 10;
 }
