--- a/app/css/main.css
+++ b/app/css/main.css
@@ -258,24 +258,37 @@ overflow: hidden;
 
 .overlay_close {
 position: absolute;
-float: right;
+top: 17px;
 right: 14px;
-top: 4px;
+width: 174px;
+height: 32px;
 font-family: arial;
-font-size: 16px;
-color: rgb(255, 255, 255);
 font-weight: bold;
-z-index: 10;
+line-height: 32px;
+font-size: 18px;
+border-radius: 5px;
+text-align: center;
+color: black;
+box-shadow: 0 0 8px black;
+background: #feffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #feffff 0%, #ddf1f9 35%, #a0d8ef 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#feffff), color-stop(35%,#ddf1f9), color-stop(100%,#a0d8ef)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#a0d8ef',GradientType=0 ); /* IE6-9 */
+
 }
 
 .overlay_close:hover {
 cursor: pointer;
-color: black;
+background: #ff9d00;
 }
 
 .overlay_install {
 position: absolute;
-top: 17px;
+top: 61px;
 right: 14px;
 width: 174px;
 height: 32px;
@@ -305,7 +318,7 @@ background: #ff9d00;
 .overlay_app_edge {
 position: absolute;
 float: right;
-top: 70px;
+top: 114px;
 right: 130px;
 width: 58px;
 height: 62px;
@@ -319,7 +332,7 @@ box-shadow: 0 1px 2px 0px black;
 .overlay_app_img {
 position: absolute;
 float: right;
-top: 80px;
+top: 124px;
 right: 131px;
 width: 56px;
 height: 56px;
@@ -334,7 +347,7 @@ box-shadow: 0 0 0px 2px white;
 position: absolute;
 float: left;
 right: 0;
-top: 78px;
+top: 122px;
 font-family: arial;
 font-size: 17px;
 margin-bottom: 5px;
@@ -347,7 +360,7 @@ width: 120px;
 position: absolute;
 float: left;
 right: 0;
-top: 101px;
+top: 144px;
 font-family: arial;
 font-size: 17px;
 margin-bottom: 5px;
@@ -360,7 +373,7 @@ width: 120px;
 position: absolute;
 float: left;
 right: 12px;
-top: 162px;
+top: 200px;
 font-family: arial;
 font-size: 16px;
 margin-bottom: 5px;
