--- a/app/css/main.css
+++ b/app/css/main.css
@@ -213,7 +213,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#066dab', end
 position: absolute;
 top: 16px;
 left: 16px;
-background: #ff9d00;
+background: repeating-linear-gradient(
+  -55deg,
+  #222,
+  #222 10px,
+  #555 10px,
+  #555 20px
+);
 border-top-left-radius: 10px;
 border-top-right-radius: 10px;
 height: 28px;
@@ -227,7 +233,7 @@ color: white;
 position: relative;
 z-index: 2;
 font-size: 18px;
-line-height: 28px;
+line-height: 27px;
 text-decoration: none;
 /* text-shadow: 3px 1px 9px #e7e7e7; */
 text-align: center;
@@ -268,17 +274,9 @@ line-height: 32px;
 font-size: 18px;
 border-radius: 5px;
 text-align: center;
-color: black;
+color: white;
 box-shadow: 0 0 8px black;
-background: #feffff; /* Old browsers */
-background: -moz-linear-gradient(top,  #feffff 0%, #ddf1f9 35%, #a0d8ef 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#feffff), color-stop(35%,#ddf1f9), color-stop(100%,#a0d8ef)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#a0d8ef',GradientType=0 ); /* IE6-9 */
-
+background: #ff9d00;
 }
 
 .overlay_close:hover {
@@ -299,16 +297,9 @@ line-height: 32px;
 font-size: 18px;
 border-radius: 5px;
 text-align: center;
-color: black;
+color: white;
 box-shadow: 0 0 8px black;
-background: #feffff; /* Old browsers */
-background: -moz-linear-gradient(top,  #feffff 0%, #ddf1f9 35%, #a0d8ef 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#feffff), color-stop(35%,#ddf1f9), color-stop(100%,#a0d8ef)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #feffff 0%,#ddf1f9 35%,#a0d8ef 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#a0d8ef',GradientType=0 ); /* IE6-9 */
+background: #ff9d00;
 }
 
 .overlay_install:hover {
