--- a/app/css/main.css
+++ b/app/css/main.css
@@ -84,10 +84,10 @@ background: orange;
 .main_navigator_h1 {
 font-size: 16px;
 font-family: Arial;
-height: 25px;
+height: 3.5vh;
 width: 180px;
 position: relative;
-line-height: 25px;
+line-height: 3.5vh;
 padding-left: 0px;
 padding-bottom: 7px;
 margin-left: 16px;
@@ -103,10 +103,10 @@ color: orange;
 .main_navigator_h2 {
 font-size: 15px;
 font-family: Arial;
-height: 23px;
+height: 3.2vh;
 width: 179px;
 position: relative;
-line-height: 23px;
+line-height: 3.2vh;
 padding-left: 7px;
 margin-left: 20px;
 margin-right: 0px;
@@ -141,15 +141,16 @@ font-size: 23px;
 margin-bottom: 5px;
 color: #23538a;
 font-weight: bold;
+padding-bottom: 4px;
 }
 
 .app_unit {
 position: relative;
 float: left;
-width: 285px;
+width: calc(25% - 16px);
 height: 170px;
 margin: 8px;
-background: rgb(255, 255, 255);
+background: rgb(219, 219, 219);
 box-shadow: 0px 0px 4px gray;
 }
 
@@ -159,18 +160,18 @@ cursor: pointer;
 
 .app_mask {
 width: 100%;
-height: 40px;
-top: 130px;
-background: rgba(255, 255, 255, 0.5);
+height: 46px;
+top: 124px;
+background: rgba(255, 255, 255, 0.8);
 position: absolute;
 }
 
 .app_name {
 position: absolute;
-left: 10px;
-top: 132px;
+left: 9px;
+top: 128px;
 font-family: arial;
-font-size: 14.5px;
+font-size: 16px;
 color: rgb(62, 62, 62);
 }
 
@@ -190,6 +191,13 @@ top: 147px;
 font-family: arial;
 font-size: 14px;
 color: rgb(51,176,240);
+}
+
+.overlay_app_certified {
+position: absolute;
+top: -7px;
+right: -6px;
+width: 75px;
 }
 
 #overlay_container {
