--- a/app/css/main.css
+++ b/app/css/main.css
@@ -151,11 +151,22 @@ width: calc(25vw - 75px);
 height: 13vw;
 margin: 8px;
 background: rgb(219, 219, 219);
-box-shadow: 0px 0px 6px gray;
+box-shadow: 0px 0px 5px gray;
+-webkit-transition: 0.3s ease-in-out;
+-moz-transition: 0.3s ease-in-out;
+-o-transition: 0.3s ease-in-out;
+transition: 0.3s ease-in-out;
 }
 
 .app_unit:hover {
+box-shadow: 0px 0px 8px black;
 cursor: pointer;
+-webkit-transform: scale(1.02) rotate(2deg);
+-moz-transform: scale(1.02) rotate(2deg);
+-o-transform: scale(1.02) rotate(2deg);
+-ms-transform: scale(1.02) rotate(2deg);
+transform: scale(1.02) rotate(2deg);
+z-index: 1;
 }
 
 .app_mask {
@@ -210,35 +221,56 @@ width: 42px;
 #overlay_container {
 position: absolute;
 top: 15px;
-left: 215px;
-width: calc(100% - 245px);
+left: 225px;
+width: calc(100% - 265px);
 height: calc(100% - 30px);
 border-radius: 15px;
 box-shadow: 0 0 8px 0px black;
 z-index: 1;
 overflow: hidden;
-/*background: rgba(220, 220, 220, 1);*/
 background: #066dab;
-background: -moz-linear-gradient(top, #066dab 0%, #8abbd7 69%, #c5deea 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#066dab), color-stop(69%,#8abbd7), color-stop(100%,#c5deea));
-background: -webkit-linear-gradient(top, #066dab 0%,#8abbd7 69%,#c5deea 100%);
-background: -o-linear-gradient(top, #066dab 0%,#8abbd7 69%,#c5deea 100%);
-background: -ms-linear-gradient(top, #066dab 0%,#8abbd7 69%,#c5deea 100%);
-background: linear-gradient(to bottom, #066dab 0%,#8abbd7 69%,#c5deea 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#066dab', endColorstr='#c5deea',GradientType=0 );
+}
+
+@-webkit-keyframes show_overlay {
+    from {
+    top: 50%;
+    left: 50%;
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    }
+    to {
+    top: 15px;
+    left: 225px;
+    width: calc(100% - 270px);
+    height: calc(100% - 30px);
+    opacity: 1;
+    }
+}
+
+#overlay_container{
+    -webkit-animation-name: show_overlay;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-direction: normal;
+    -webkit-animation-delay: 0;
+    -webkit-animation-play-state: running;
+    -webkit-animation-fill-mode: forwards;
 }
 
 .overlay_app_header {
 position: absolute;
-top: 19px;
-left: 19px;
-background: repeating-linear-gradient( -55deg, #222, #222 10px, #555 10px, #555 20px );
+top: 0px;
+left: 0px;
 border-top-left-radius: 10px;
 border-top-right-radius: 10px;
 height: 28px;
-width: calc(100% - 245px);
+width: calc(100% - 225px);
 z-index: 4;
 box-shadow: 0 0 10px black;
+background-image: url("../img/strip.png");
+background-repeat: repeat;
 }
 
 .overlay_app_header_name {
@@ -257,10 +289,10 @@ float: center;
 
 .overlay_iframe_container{
 position: absolute;
-top: 48px;
-left: 19px;
-width: calc(100% - 245px);
-height: calc(100% - 67px);
+top: 29px;
+left: 0px;
+width: calc(100% - 225px);
+height: calc(100% - 29px);
 border-bottom-right-radius: 10px;
 border-bottom-left-radius: 10px;
 box-shadow: 0 0 10px 1px black;
@@ -332,26 +364,28 @@ line-height: 32px;
 font-size: 18px;
 text-align: center;
 color: black;
-background: black;
-box-shadow: 0 0 16px black;
+background: transparent;
 }
 
 .overlay_close_x {
-top: 48px;
-left: 13px;
-right: 300px;
-width: 27px;
-height: 27px;
+background-image: url("../img/close.png");
+background-size: 30px 30px;
+background-repeat: no-repeat;
+top: 50px;
+right: -9px;
+width: 30px;
+height: 30px;
 position: relative;
 font-family: cursive;
 font-size: 24px;
 font-weight: bold;
 color: white;
+z-index: 10;
 }
 
 .overlay_close_x:hover {
 cursor: pointer;
-color: red;
+background-image: url("../img/close_red.png");
 }
 
 .overlay_side_price {
@@ -415,7 +449,7 @@ color: white;
 }
 .star-icon {
     color: #ddd;
-    font-size: 2em;
+    font-size: 26px;
     position: relative;
 }
 .star-icon.full:before {
@@ -436,8 +470,8 @@ color: white;
 }
 @-moz-document url-prefix() { /* Firefox Hack :( */
   .star-icon {
-    font-size: 50px;
-    line-height: 34px;
+    font-size: 26px;
+    line-height: 36px;
   }
 }
 
