--- a/app/css/main.css
+++ b/app/css/main.css
@@ -119,7 +119,7 @@ cursor: pointer;
 color: orange;
 }
 
-.detail_container {
+#list_container {
 top: 0px;
 padding-left: 208px;
 padding-top: 10px;
@@ -158,14 +158,18 @@ box-shadow: 0px 0px 5px gray;
 transition: 0.3s ease-in-out;
 }
 
+.red {
+background: red;
+}
+
 .app_unit:hover {
 box-shadow: 0px 0px 8px black;
 cursor: pointer;
--webkit-transform: scale(1.02) rotate(2deg);
--moz-transform: scale(1.02) rotate(2deg);
--o-transform: scale(1.02) rotate(2deg);
--ms-transform: scale(1.02) rotate(2deg);
-transform: scale(1.02) rotate(2deg);
+-webkit-transform: scale(1.01) rotate(2deg);
+-moz-transform: scale(1.01) rotate(2deg);
+-o-transform: scale(1.01) rotate(2deg);
+-ms-transform: scale(1.01) rotate(2deg);
+transform: scale(1.01) rotate(2deg);
 z-index: 1;
 }
 
@@ -222,7 +226,7 @@ width: 42px;
 position: absolute;
 top: 15px;
 left: 225px;
-width: calc(100% - 265px);
+width: calc(100% - 260px);
 height: calc(100% - 30px);
 border-radius: 15px;
 box-shadow: 0 0 8px 0px black;
@@ -231,26 +235,40 @@ overflow: hidden;
 background: #066dab;
 }
 
-@-webkit-keyframes show_overlay {
-    from {
-    top: 50%;
-    left: 50%;
-    width: 0px;
-    height: 0px;
+#movein_container {
+position: absolute;
+top: 0px;
+left: 0px;
+width: 200px;
+height: 100%;
+z-index: 2;
+box-shadow: 0 0 8px black;
+opacity: 0;
+background: rgb(86,86,86); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(86,86,86,1) 0%, rgba(155,155,155,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(86,86,86,1)), color-stop(100%,rgba(155,155,155,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#565656', endColorstr='#9b9b9b',GradientType=0 ); /* IE6-9 */
+
+}
+
+@-webkit-keyframes show_movein_container {
+    0% {
+    left: -200px;
     opacity: 0;
     }
-    to {
-    top: 15px;
-    left: 225px;
-    width: calc(100% - 270px);
-    height: calc(100% - 30px);
+    100% {
+    left: 0px;
     opacity: 1;
     }
 }
 
-#overlay_container{
-    -webkit-animation-name: show_overlay;
-    -webkit-animation-duration: 1s;
+#movein_container{
+    -webkit-animation-name: show_movein_container;
+    -webkit-animation-duration: 0.5s;
     -webkit-animation-timing-function: ease;
     -webkit-animation-iteration-count: 1;
     -webkit-animation-direction: normal;
@@ -266,7 +284,7 @@ left: 0px;
 border-top-left-radius: 10px;
 border-top-right-radius: 10px;
 height: 28px;
-width: calc(100% - 225px);
+width: 100%;
 z-index: 4;
 box-shadow: 0 0 10px black;
 background-image: url("../img/strip.png");
@@ -281,7 +299,6 @@ font-size: 18px;
 line-height: 27px;
 text-decoration: none;
 text-align: center;
-text-transform: capitalize;
 font-family: arial;
 font-weight: bold;
 float: center;
@@ -291,7 +308,7 @@ float: center;
 position: absolute;
 top: 29px;
 left: 0px;
-width: calc(100% - 225px);
+width: 100%;
 height: calc(100% - 29px);
 border-bottom-right-radius: 10px;
 border-bottom-left-radius: 10px;
@@ -302,46 +319,23 @@ z-index: 3;
 
 .overlay_app_logo {
 position: absolute;
-top: 5px;
-left: 5px;
+top: 35px;
+right: 60px;
 }
 
 .overlay_app_img {
 position: absolute;
 top: 0px;
-left: 0px;
-width: 56px;
-height: 56px;
+right: 0px;
+width: 80px;
+height: 80px;
 background: rgb(51, 176, 240);
 border-radius: 12px;
 margin-top: 0;
 margin-left: 0;
 box-shadow: 0 0 10px 1px black;
 z-index: 10;
-opacity: 0.9;
-}
-
-.overlay_app_get {
-position: absolute;
-opacity: 0;
-background: #ff9d00;
-top: 0px;
-left: 0px;
-width: 56px;
-height: 56px;
-line-height: 56px;
-text-align: center;
-border-radius: 12px;
-font-family: arial;
-font-size: 20px;
-font-weight: bold;
-color: white;
-z-index: 11;
-}
-
-.overlay_app_logo:hover .overlay_app_get {
-opacity:1;
-cursor: pointer;
+opacity: 1;
 }
 
 .full {
@@ -350,37 +344,38 @@ height: 100%;
 overflow: hidden;
 }
 
-.overlay_close {
-position: absolute;
-top: -45px;
-float: right;
-right: -45px;
-width: 90px;
-height: 90px;
-border-radius: 45px;
-font-family: arial;
-font-weight: bold;
-line-height: 32px;
-font-size: 18px;
-text-align: center;
-color: black;
-background: transparent;
-}
-
 .overlay_close_x {
 background-image: url("../img/close.png");
-background-size: 30px 30px;
+background-size: 25px 25px;
 background-repeat: no-repeat;
-top: 50px;
-right: -9px;
-width: 30px;
-height: 30px;
+top: 2px;
+right: 2px;
+width: 25px;
+height: 25px;
 position: relative;
 font-family: cursive;
 font-size: 24px;
 font-weight: bold;
 color: white;
 z-index: 10;
+position: absolute;
+}
+
+.overlay_close_x_2 {
+background-image: url("../img/close.png");
+background-size: 25px 25px;
+background-repeat: no-repeat;
+top: 7px;
+right: 5px;
+width: 25px;
+height: 25px;
+position: relative;
+font-family: cursive;
+font-size: 24px;
+font-weight: bold;
+color: white;
+z-index: 10;
+position: absolute;
 }
 
 .overlay_close_x:hover {
@@ -388,16 +383,21 @@ cursor: pointer;
 background-image: url("../img/close_red.png");
 }
 
+.overlay_close_x_2:hover {
+cursor: pointer;
+background-image: url("../img/close_red.png");
+}
+
 .overlay_side_price {
 position: absolute;
-top: 50px;
-right: 24px;
-width: 175px;
-height: 50px;
-font-family: arial;
-font-weight: bold;
-line-height: 50px;
-font-size: 20px;
+  top: 198px;
+  right: 12px;
+  width: 175px;
+  height: 40px;
+  font-family: arial;
+  font-weight: bold;
+  line-height: 40px;
+  font-size: 20px;
 border-radius: 12px;
 text-align: center;
 color: black;
@@ -419,7 +419,8 @@ background: #ff9d00;
 top: 0px;
 right: 0px;
 width: 175px;
-height: 50px;
+  height: 40px;
+  line-height: 40px;
 border-radius: 12px;
 font-family: arial;
 font-size: 20px;
@@ -431,37 +432,66 @@ color: white;
 opacity:1;
 cursor: pointer;
 }
+.overlay_name {
+position: absolute;
+top: 120px;
+right: 0px;
+width: 200px;
+text-align: center;
+font-family: arial;
+font-size: 20px;
+color: rgb(255, 255, 255);
+}
+.overlay_brief {
+  position: absolute;
+  top: 148px;
+  right: 0px;
+  width: 200px;
+  text-align: center;
+  font-family: arial;
+  font-size: 14px;
+  color: rgb(218, 218, 218);
+}
 .overlay_review {
 position: absolute;
-top: 106px;
-right: 24px;
-width: 175px;
-text-align: center;
+  top: 245px;
+  right: 0px;
+  width: 200px;
+  text-align: center;
 }
 .overlay_user_number {
 position: absolute;
-top: 37px;
-width: 175px;
+top: 27px;
+width: 200px;
 text-align: center;
 font-family: arial;
-font-size: 18px;
-color: white;
+font-size: 17px;
+color: rgb(218, 218, 218);
+}
+.overlay_related {
+  position: absolute;
+  top: 336px;
+  width: 200px;
+  text-align: center;
+  font-family: arial;
+  font-size: 16px;
+  color: rgb(255, 255, 255);
 }
 .star-icon {
-    color: #ddd;
-    font-size: 26px;
-    position: relative;
+color: rgb(173, 173, 173);
+font-size: 20px;
+position: relative;
 }
 .star-icon.full:before {
     text-shadow: 0 0 2px rgba(0,0,0,0.7);
-    color: white;
+    color: rgb(218, 218, 218);
     content: '\2605'; /* Full star in UTF-8 */
     position: absolute;
     left: 0;
 }
 .star-icon.half:before {
     text-shadow: 0 0 2px rgba(0,0,0,0.7);
-    color: white;
+    color: rgb(218, 218, 218);
     content: '\2605'; /* Full star in UTF-8 */
     position: absolute;
     left: 0;
