--- a/app/css/main.css
+++ b/app/css/main.css
@@ -278,15 +278,7 @@ width: 200px;
 height: 100%;
 z-index: 2;
 box-shadow: 0 0 8px black;
-background: rgb(86,86,86); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(86,86,86,1) 0%, rgba(155,155,155,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(86,86,86,1)), color-stop(100%,rgba(155,155,155,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(86,86,86,1) 0%,rgba(155,155,155,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#565656', endColorstr='#9b9b9b',GradientType=0 ); /* IE6-9 */
-
+background: rgb(51,176,240);
 }
 
 #movein_container{
@@ -565,7 +557,7 @@ color: rgb(255, 255, 255);
   text-align: center;
   font-family: arial;
   font-size: 14px;
-  color: rgb(218, 218, 218);
+  color: rgb(255, 255, 255);
 }
 .overlay_review {
 position: absolute;
@@ -581,7 +573,7 @@ width: 200px;
 text-align: center;
 font-family: arial;
 font-size: 17px;
-color: rgb(218, 218, 218);
+color: rgb(255, 255, 255);
 }
 .overlay_related {
   position: absolute;
@@ -593,20 +585,20 @@ color: rgb(218, 218, 218);
   color: rgb(255, 255, 255);
 }
 .star-icon {
-color: rgb(173, 173, 173);
+color: rgb(255, 255, 255);
 font-size: 20px;
 position: relative;
 }
 .star-icon.full:before {
     text-shadow: 0 0 2px rgba(0,0,0,0.7);
-    color: rgb(218, 218, 218);
+    color: rgb(255, 255, 255);
     content: '\2605'; /* Full star in UTF-8 */
     position: absolute;
     left: 0;
 }
 .star-icon.half:before {
     text-shadow: 0 0 2px rgba(0,0,0,0.7);
-    color: rgb(218, 218, 218);
+    color: rgb(255, 255, 255);
     content: '\2605'; /* Full star in UTF-8 */
     position: absolute;
     left: 0;
