--- a/app/css/main.css
+++ b/app/css/main.css
@@ -165,11 +165,11 @@ background: red;
 .app_unit:hover {
 box-shadow: 0px 0px 8px black;
 cursor: pointer;
--webkit-transform: scale(1.01) rotate(2deg);
--moz-transform: scale(1.01) rotate(2deg);
--o-transform: scale(1.01) rotate(2deg);
--ms-transform: scale(1.01) rotate(2deg);
-transform: scale(1.01) rotate(2deg);
+-webkit-transform: scale(1.01) rotate(3deg);
+-moz-transform: scale(1.01) rotate(3deg);
+-o-transform: scale(1.01) rotate(3deg);
+-ms-transform: scale(1.01) rotate(3deg);
+transform: scale(1.01) rotate(3deg);
 z-index: 1;
 }
 
@@ -278,7 +278,15 @@ width: 200px;
 height: 100%;
 z-index: 2;
 box-shadow: 0 0 8px black;
-background: rgb(51,176,240);
+background: #23538a; /* Old browsers */
+background: -moz-linear-gradient(top,  #23538a 0%, #5db9dd 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #23538a 0%,#5db9dd 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #23538a 0%,#5db9dd 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 ); /* IE6-9 */
+
 }
 
 #movein_container{
