--- a/app/css/main.css
+++ b/app/css/main.css
@@ -60,11 +60,23 @@ box-shadow: inset 0 0 4px 1px black;
 
 
 .search_bar_input {
-font-family: arial;
-font-size: 16px;
-line-height: 25px;
-padding-left: 16px;
-color: rgb(0, 42, 139);
+  font-family: arial;
+  font-size: 16px;
+  line-height: 25px;
+  padding-left: 12px;
+  width: 176px;
+  color: rgb(0, 0, 0);
+  height: 26px;
+  border-radius: 7px;
+  border-width: 0px;
+  border-style: none;
+  box-shadow: inset 0 0 5px gray;
+  background: rgb(230, 230, 230);
+}
+
+.search_bar_input:focus{
+background: white;
+outline: 0px;
 }
 
 .search_bar_bn {
@@ -74,16 +86,16 @@ right: 2px;
 width: 22px;
 height: 22px;
 background: orange;
-border-radius: 26px;
+border-radius: 6px;
 box-shadow: 0 0 2px 1px rgb(48, 48, 48);
 }
 
 .search_bar_bn:hover {
-background: orange;
+cursor: pointer;
 }
 
 .main_navigator_h1 {
-font-size: 2.1vh;
+font-size: 2vh;
 font-family: Arial;
 height: 3.5vh;
 width: 180px;
@@ -102,7 +114,7 @@ color: orange;
 }
 
 .main_navigator_h2 {
-font-size: 2vh;
+font-size: 1.8vh;
 font-family: Arial;
 height: 3.2vh;
 width: 179px;
@@ -121,6 +133,19 @@ color: orange;
 }
 
 #list_container {
+top: 0px;
+padding-left: 208px;
+padding-top: 10px;
+padding-right: 8px;
+padding-bottom: 8px;
+width: 100%;
+height: 100%;
+background: transparent;
+overflow-y: scroll;
+overflow-x: hidden;
+}
+
+#search_container {
 top: 0px;
 padding-left: 208px;
 padding-top: 10px;
@@ -768,3 +793,18 @@ position: relative;
   }
 }
 
+::-webkit-input-placeholder {
+   color: rgb(120,120,120);
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: rgb(120,120,120);
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: rgb(120,120,120);
+}
+
+:-ms-input-placeholder {  
+   color: rgb(120,120,120);
+}
